--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div style="background-color: #E5E4E2; border-radius: 6px;" class="row page-section text centre">
-       <img style="box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;" src="Copy of New Managers EDM 1.5 centre aligned .png" alt="March EDM" srcset=""></img></a>
+       <a href="https://www.slhd.nsw.gov.au/cewd/course-qualifications.html#cert-iv-leadership-and-management" target="_blank"><img style="box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;" src="BSB50420 Diploma of Leadership and Management EDM.png" alt="March EDM" srcset=""></img></a>
     </div>
 </body>
 </html>
